--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-
+ 
     <style>
        .number img{
            width: 100px;
@@ -38,46 +38,6 @@
             </div>
         </div>
     </div>
-    <script>
-      let realData = "";
-      let quotesData="";
-   
-      const quotes = document.querySelector("#quotes");
-     const author=document.querySelector("#author");
-     const btn=document.getElementById("btn");
-     const tweetMe=document.getElementById("tweetMe");
-
-
-     const tweetNow=()=>{
-         let tweetPost=`https://twitter.com/intent/tweet?text=${quotesData.text } ${quotesData.author}`;
-         window.open(tweetPost);
-     }
-      const getNewQuotes = () => {
-          let rnum=Math.floor(Math.random()*1000);
-          quotesData=realData[rnum];
-          quotes.innerText=`${quotesData.text}`;
-          quotesData.author==null 
-          ?(author.innerText=="unKnown")
-          :(  author.innerText=`${quotesData.author}`);
-        
-      };
-
-
-      const getQuotes = async () => {
-        const api = "https://type.fit/api/quotes";
-        try {
-          let data = await fetch(api);
-          realData = await data.json();
-          // console.log(realData[i].text);
-          getNewQuotes();
-          //   console.log(realData[10].text);
-          //   console.log(realData[10].author);
-        } catch (error) {}
-      };
-
-      tweetMe.addEventListener("click",tweetNow);
-      btn.addEventListener("click",getNewQuotes);
-      getQuotes();
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
